# sopel_ai

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  dev-tools.txt  motoko.py  package.txt  pyproject.toml  requirements.txt
dockerized/: Dockerfile  Makefile  build.mk  docker-compose.yaml  runsopel
docs/: index.html  search.js  sopel_ai.html
docs/sopel_ai/: config.html  core.html  errors.html  plugin.html
motoko/: __init__.py  errors.py
sopel_ai/: __init__.py  config.py  core.py  errors.py  plugin.py
sopel_motoko/: __init__.py  config.py  errors.py  plugin.py
tests/: config-test.py  errors-test.py  motoko-test.py  sopel_ai-test.py  sopel_motoko-test.py
