# See: https://github.com/poof-backup/poof/blob/master/LICENSE.txt

[build-system]
requires = [ 'setuptools' ]
build-backend = 'setuptools.build_meta'


[metadata]
url = 'https://github.com/pr3d4t0r/m0toko'


[project]
authors = [
    { name = 'The m0toko team', email = 'm0toko@cime.net' }
]
classifiers = [
    'Intended Audience :: Other Audience',
    'License :: OSI Approved :: BSD License',
    'Operating System :: MacOS',
    'Operating System :: Unix',
    'Operating System :: Windows',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Topic :: Utilities',
]
description = 'm0toko - an LLM enhanced chat bot plug-in'
dynamic = [
    'dependencies',
    'version',
]
keywords = [
    'ai',
    'bot',
    'irc',
    'llm',
    'plugin',
    'sopel'
]
name = 'sopel_motoko'
readme = 'README.md'
requires-python = '>=3.8'


# [project.entry-points.'sopel-plugins']
# motoko = 'sopel_motoko.plugin'
#
#
# [project.entry-points.'sopel_motoko.choices']
# stable = 'sopel_motoko.choices:Stable'
#
#
# [project.scripts]
# motoko = 'motoko:main'


[project.urls]
Homepage = 'https://github.com/pr3d4t0r/m0toko'
'Bug Tracker' = 'https://github.com/pr3d4t0r/m0toko/issues'


[tool.pytest.ini_options]
addopts = '-sv'
testpaths = [
    'tests'
]


[tool.setuptools]
include-package-data = true
packages = [
    'sopel_motoko',
    # 'tests', # because test modules import objects from other test modules
]


[tool.setuptools.dynamic]
dependencies = { file = 'requirements.txt' }
version = { attr = 'sopel_motoko.__VERSION__' }

