# See:  https://raw.githubusercontent.com/pr3d4t0r/sopel_ai/master/LICENSE.txt

[build-system]
requires = [ 'setuptools' ]
build-backend = 'setuptools.build_meta'


[metadata]
url = 'https://github.com/pr3d4t0r/sopel_ai'


[project]
authors = [
    { name = 'The SopelAI team', email = 'sopel_ai@cime.net' }
]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: BSD License',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Topic :: Communications :: Chat',
    'Topic :: Utilities',
]
description = 'Sopel AI - an LLM enhanced chat bot plug-in'
dynamic = [
    'dependencies',
]
keywords = [
    'ai',
    'bot',
    'irc',
    'llm',
    'plugin',
    'sopel'
]
license = { text = 'BSD-3-Clause' }
name = 'sopel-ai'
readme = 'README.md'
requires-python = '>=3.9'
version = '1.3.1'


[project.entry-points.'sopel.plugins']
sopel_ai = 'sopel_ai.plugin'


# [project.scripts]
# motoko = 'motoko:main'


[project.urls]
Homepage = 'https://github.com/pr3d4t0r/sopel_ai'
'Bug Tracker' = 'https://github.com/pr3d4t0r/sopel_ai/issues'


[tool.pytest.ini_options]
addopts = '-sv'
testpaths = [
    'tests'
]


[tool.setuptools]
include-package-data = true
packages = [
    'sopel_ai',
    # 'tests', # because test modules import objects from other test modules
]


[tool.setuptools.dynamic]
dependencies = { file = 'requirements.txt' }

